syntax = "proto3";

package nebulacert;

option go_package = "github.com/Erik142/veil-certs/pkg/proto";

service CertificateService {
  rpc GenerateHostCertificate(GenerateHostCertificateRequest)
      returns (GenerateHostCertificateResponse);
}

message GenerateHostCertificateRequest {
  string hostname = 1;
  string ip_cidr = 2;
  repeated string groups = 3;
  int64 duration_seconds = 4;
  bytes public_key = 5;
}

message GenerateHostCertificateResponse {
  bytes cert_pem = 1; // PEM-encoded host certificate
}
